AC_INIT([lazylpsolverlibs], [0.1.2], [chmd@chmd.fr], [lazylpsolverlibs],
        [https://code.google.com/p/lazylpsolverlibs/])
AC_PREREQ([2.59])
AC_PROG_CC
LT_INIT
AM_INIT_AUTOMAKE([1.10 no-define])
PKG_CHECK_MODULES([GMODULE], [gmodule-2.0 >= 0])
AC_CONFIG_FILES([Makefile lazycplex.pc lazyxprs.pc lazygurobi.pc lazyglpk.pc])
AC_OUTPUT
